Fixed overflowing elements.

--- a/termproject/static/css/style.css
+++ b/termproject/static/css/style.css
@@ -805,7 +805,6 @@ main.main-services-reception .reservation,
 main.main-services-reception .contact-page,
 main.main-services-reception .container-contact-us {
   margin: 0 auto;
-  width: 100%;
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
