--- a/termproject/static/scss/_small.scss
+++ b/termproject/static/scss/_small.scss
@@ -297,7 +297,6 @@ main.main-services-reception {
     .contact-page,
     .container-contact-us {
         margin: 0 auto;
-        width: 100%;
         display: flex;
         flex-direction: column;
         flex-basis: 100%;
